# airflow-playground

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: spark_connect_example.py  spark_processing.py  spark_submit_example.py  spark_subprocess_example.py  user_processing.py
spark/apps/: example_job.py  spark_connect_job.py
spark/data/: output.json
